@startuml

title __ENTITIES's Class Diagram__\n

  namespace com.vrush.microservices.searching {
    namespace entities {
      class com.vrush.microservices.searching.entities.Booking {
          - creationDate : LocalDateTime
          - dates : List<BookingDates>
          - guestEmail : String
          - id : UUID
          - lastUpdate : LocalDateTime
          - states : List<BookingStates>
          - version : Integer
          + Booking()
          + Booking()
          + equals()
          + getCreationDate()
          + getDates()
          + getGuestEmail()
          + getId()
          + getLastUpdate()
          + getRoom()
          + getStates()
          + getVersion()
          + hashCode()
          + setCreationDate()
          + setDates()
          + setGuestEmail()
          + setId()
          + setLastUpdate()
          + setRoom()
          + setStates()
          + setVersion()
          + toString()
          # canEqual()
          # onCreate()
          # onUpdate()
      }
    }
  }
  

  namespace com.vrush.microservices.searching {
    namespace entities {
      class com.vrush.microservices.searching.entities.BookingDates {
          - date : LocalDate
          - id : UUID
          - version : Integer
          + BookingDates()
          + BookingDates()
          + equals()
          + getBooking()
          + getDate()
          + getId()
          + getVersion()
          + hashCode()
          + setBooking()
          + setDate()
          + setId()
          + setVersion()
          + toString()
          # canEqual()
          # onCreate()
      }
    }
  }
  

  namespace com.vrush.microservices.searching {
    namespace entities {
      class com.vrush.microservices.searching.entities.BookingStates {
          - creationDate : LocalDateTime
          - id : UUID
          - lastUpdate : LocalDateTime
          - state : String
          - version : Integer
          + BookingStates()
          + BookingStates()
          + equals()
          + getBooking()
          + getCreationDate()
          + getId()
          + getLastUpdate()
          + getState()
          + getVersion()
          + hashCode()
          + setBooking()
          + setCreationDate()
          + setId()
          + setLastUpdate()
          + setState()
          + setVersion()
          + toString()
          # canEqual()
          # onCreate()
          # onUpdate()
      }
    }
  }
  

  namespace com.vrush.microservices.searching {
    namespace entities {
      class com.vrush.microservices.searching.entities.Room {
          - bookings : List<Booking>
          - creationDate : LocalDateTime
          - description : String
          - id : UUID
          - lastUpdate : LocalDateTime
          - name : String
          - perNightValue : BigDecimal
          - version : Integer
          + Room()
          + Room()
          + equals()
          + getBookings()
          + getCreationDate()
          + getDescription()
          + getId()
          + getLastUpdate()
          + getName()
          + getPerNightValue()
          + getVersion()
          + hashCode()
          + setBookings()
          + setCreationDate()
          + setDescription()
          + setId()
          + setLastUpdate()
          + setName()
          + setPerNightValue()
          + setVersion()
          + toString()
          # canEqual()
          # onCreate()
          # onUpdate()
      }
    }
  }
  

  com.vrush.microservices.searching.entities.Booking o-- com.vrush.microservices.searching.entities.Room : room
  com.vrush.microservices.searching.entities.BookingDates o-- com.vrush.microservices.searching.entities.Booking : booking
  com.vrush.microservices.searching.entities.BookingStates o-- com.vrush.microservices.searching.entities.Booking : booking


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
